# LLM

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
openspec/changes/add-advanced-guide-explanations/: design.md  proposal.md  tasks.md
output/: debug.html
scripts/: build-pdf.mjs  pdf-config.yaml
scripts/templates/: ebook.css
topics/: README.md  formula-appendix.md
topics/activation/: advanced-guide.md  beginner-guide.md  diagram.md
topics/alignment/: advanced-guide.md  beginner-guide.md  diagram.md
topics/attention/: advanced-guide.md  beginner-guide.md  diagram.md
topics/attention-variants/: advanced-guide.md  beginner-guide.md  diagram.md
topics/decoder/: advanced-guide.md  beginner-guide.md  diagram.md
topics/distributed-training/: advanced-guide.md  beginner-guide.md  diagram.md
topics/embedding/: README.md  diagram.md
topics/encoder/: advanced-guide.md  beginner-guide.md  diagram.md
topics/ffn/: advanced-guide.md  beginner-guide.md  diagram.md
topics/fine-tuning/: README.md
topics/generation/: advanced-guide.md  beginner-guide.md  diagram.md
topics/inference/: README.md
topics/long-context/: advanced-guide.md  beginner-guide.md  diagram.md
topics/moe/: advanced-guide.md  beginner-guide.md  diagram.md
topics/normalization/: advanced-guide.md  beginner-guide.md  diagram.md
topics/pre-training/: advanced-guide.md  beginner-guide.md  diagram.md
topics/prompt-engineering/: README.md
topics/rag/: README.md
topics/tokenization/: advanced-guide.md  beginner-guide.md  diagram.md
(+155 files in other folders)
